# barcode-taste-note-server

./: .env  .gitignore  CLAUDE.md  Cargo.toml  README.md  RULES.md  daily_job.sh  deploy.command  logger.pl  send_to_codex.command  template.prompt.md  test_regex.rs
batch/: Cargo.toml  README.md
batch/data/: new_product.json  new_product_example.json
batch/scripts/: daily_job.sh
batch/src/: cohere.rs  db.rs  main.rs  models.rs  r2.rs  schema.rs
batch/src/jobs/: add_product_with_json.rs  backup_db.rs  backup_image.rs  clean_image.rs  mod.rs  reembed_products.rs
crawler/: Cargo.toml  diesel.toml
crawler/artdrink/: Cargo.toml
crawler/artdrink/src/: main.rs
crawler/barrelandbatch/: Cargo.toml
crawler/barrelandbatch/output/: new_product.json
crawler/barrelandbatch/src/: main.rs
crawler/emart/: Cargo.toml
crawler/emart/output/: new_product.json
crawler/emart/src/: main.rs
crawler/listex/: Cargo.toml
crawler/listex/src/: main.rs
crawler/spades/: Cargo.toml
crawler/spades/output/: new_product.json
crawler/spades/src/: main.rs
crawler/src/: db.rs  main.rs  models.rs  openai.rs  r2.rs  schema.rs
crawler/whiskeyshelf/: Cargo.toml
crawler/whiskeyshelf/output/: new_product.json
crawler/whiskeyshelf/src/: main.rs
crawler/willowspirits/: Cargo.toml
crawler/willowspirits/src/: main.rs
migrations/2026-03-05-131051_add_lower_name_index_to_products/: down.sql  up.sql
src/: auth.rs  constants.rs  errors.rs  lib.rs  main.rs  models.rs  schema.rs
src/handlers/: admin_handlers.rs  btn_app_handlers.rs  images_handlers.rs  mod.rs  notes_handlers.rs  products_handlers.rs  users_handler.rs  webhook_handlers.rs
src/utils/: auth.rs  block_list.rs  db.rs  fcm.rs  gemini.rs  image_file.rs  logger.rs  mod.rs  nickname.rs  openai.rs  r2.rs  rate_limit.rs  response_mapper.rs  scraper.rs  translator.rs
static/images/: 1eccafd2-a658-4623-b97f-0a5b14bc1754  2a8f20ca-41b0-4c3c-92e1-121f0c2bf312  38685737-4bb8-44c8-a2b3-f42c60090cba  836a266b-50b6-4948-baee-2bbaf74c0df5  ba6d8296-ceef-4584-bd98-b8781fa44e1b  dd283fef-1510-4f34-9268-fa4118acde5f  f2ff48b0-01c4-4617-9f93-1ba76763faff
tests/: user_test.rs
