[package]
name = "barcode_taste_note"
version = "0.1.0"
authors = ["OQ <haze5959@naver.com>"]
edition = "2024"

[dependencies]
actix-web = "4"
actix-web-httpauth = "0.8.2"
derive_more = "0.99.2"
uuid = { version = "1.0", features = ["v4", "serde"] }
diesel = { version = "2.2.8", features = ["postgres", "uuid", "r2d2", "serde_json", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
futures = "0.3.1"
serde = "1.0"
serde_derive = "1.0"
actix-service = "1.0.1"
alcoholic_jwt = "1.0.0"
reqwest = "0.9.22"
actix-rt = "2.10.0"
env_logger = "0.11.7"
log = "0.4.26"
serde_json = "1.0.140"
