[package]
name = "batch"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2", features = ["postgres", "chrono", "uuid", "serde_json"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.17"
log = "0.4.26"
reqwest = { version = "0.12", features = ["json"] }
regex = "1"
pgvector = { version = "0.3", features = ["diesel"] }
