[package]
name = "crawler"
version = "0.1.0"
edition = "2024"

[dependencies]
async-openai = "0.26.0"
chrono = "0.4"
diesel = { version = "2", features = ["postgres", "chrono", "uuid", "serde_json"] }
dotenvy = "0.15"
pgvector = { version = "0.3.3", features = ["diesel", "serde"] }
regex = "1.12.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.17"
log = "0.4.26"
