[package]
name = "artdrink-crawler"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
scraper = "0.20"
regex = "1.10"
