[package]
name = "whiskeyshelf-crawler"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
diesel = { version = "2.2.8", features = ["postgres", "uuid"] }
uuid = { version = "1.0", features = ["v4"] }
